--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,6 @@
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/js/jquery.backstretch.min.js"></script>
   <script src="assets/js/retina-1.1.0.min.js"></script>
-  <script src="assets/js/scripts.js"></script>
+  <!--<script src="assets/js/scripts.js"></script>-->
 </body>
 </html>
